sandbox/JoltC/Functions.h

////////////////////////////////////////////////////////////////////////////////
// TempAllocatorImpl

typedef struct JPC_TempAllocatorImpl JPC_TempAllocatorImpl;
////////////////////////////////////////////////////////////////////////////////
// JobSystem

typedef struct JPC_JobSystem JPC_JobSystem;
typedef struct JPC_BroadPhaseLayerInterface JPC_BroadPhaseLayerInterface;
typedef struct JPC_SimShapeFilter JPC_SimShapeFilter;
typedef struct JPC_ObjectVsBroadPhaseLayerFilter JPC_ObjectVsBroadPhaseLayerFilter;
typedef struct JPC_ObjectLayerPairFilter JPC_ObjectLayerPairFilter;
typedef struct JPC_CollideShapeSettings {
	// CollideSettingsBase
	JPC_ActiveEdgeMode ActiveEdgeMode;
	JPC_CollectFacesMode CollectFacesMode;
	float CollisionTolerance;
	float PenetrationTolerance;
	JPC_Vec3 ActiveEdgeMovementDirection;

	// CollideShapeSettings
	float MaxSeparationDistance;
	JPC_BackFaceMode BackFaceMode;
} JPC_CollideShapeSettings;
typedef struct JPC_ContactListener JPC_ContactListener;
////////////////////////////////////////////////////////////////////////////////
// DrawSettings

typedef struct JPC_BodyManager_DrawSettings {
	bool mDrawGetSupportFunction;
	bool mDrawSupportDirection;
	bool mDrawGetSupportingFace;
	bool mDrawShape;
	bool mDrawShapeWireframe;
	JPC_ShapeColor mDrawShapeColor;
	bool mDrawBoundingBox;
	bool mDrawCenterOfMassTransform;
	bool mDrawWorldTransform;
	bool mDrawVelocity;
	bool mDrawMassAndInertia;
	bool mDrawSleepStats;
	bool mDrawSoftBodyVertices;
	bool mDrawSoftBodyVertexVelocities;
	bool mDrawSoftBodyEdgeConstraints;
	bool mDrawSoftBodyBendConstraints;
	bool mDrawSoftBodyVolumeConstraints;
	bool mDrawSoftBodySkinConstraints;
	bool mDrawSoftBodyLRAConstraints;
	bool mDrawSoftBodyPredictedBounds;
	JPC_SoftBodyConstraintColor DrawSoftBodyConstraintColor;
} JPC_BodyManager_DrawSettings;
typedef struct JPC_DebugRendererSimple JPC_DebugRendererSimple;
////////////////////////////////////////////////////////////////////////////////
// Constraint -> RefTarget<Constraint>

typedef struct JPC_Constraint JPC_Constraint;
// extern TransformedShape JPC_Body_GetTransformedShape(const JPC_Body* self);
// extern BodyCreationSettings JPC_Body_GetBodyCreationSettings(const JPC_Body* self);
// extern SoftBodyCreationSettings JPC_Body_GetSoftBodyCreationSettings(const JPC_Body* self);

////////////////////////////////////////////////////////////////////////////////
// BodyLockInterface

typedef struct JPC_BodyLockInterface JPC_BodyLockInterface;
////////////////////////////////////////////////////////////////////////////////
// BodyInterface

typedef struct JPC_BodyInterface JPC_BodyInterface;
////////////////////////////////////////////////////////////////////////////////
// NarrowPhaseQuery

typedef struct JPC_NarrowPhaseQuery JPC_NarrowPhaseQuery;
typedef struct JPC_NarrowPhaseQuery_CastShapeArgs {
	JPC_RShapeCast ShapeCast;
	JPC_ShapeCastSettings Settings;
	JPC_RVec3 BaseOffset;
	JPC_CastShapeCollector *Collector;
	const JPC_BroadPhaseLayerFilter *BroadPhaseLayerFilter;
	const JPC_ObjectLayerFilter *ObjectLayerFilter;
	const JPC_BodyFilter *BodyFilter;
	const JPC_ShapeFilter *ShapeFilter;
} JPC_NarrowPhaseQuery_CastShapeArgs;
extern void JPC_NarrowPhaseQuery_CastShape(const JPC_NarrowPhaseQuery* self, JPC_NarrowPhaseQuery_CastShapeArgs* args);
extern void JPC_CollideShapeSettings_default(JPC_CollideShapeSettings* object);
typedef struct JPC_NarrowPhaseQuery_CollideShapeArgs {
	const JPC_Shape *Shape;
	JPC_Vec3 ShapeScale;
	JPC_RMat44 CenterOfMassTransform;
	JPC_CollideShapeSettings Settings;
	JPC_RVec3 BaseOffset;
	JPC_CollideShapeCollector *Collector;
	const JPC_BroadPhaseLayerFilter *BroadPhaseLayerFilter;
	const JPC_ObjectLayerFilter *ObjectLayerFilter;
	const JPC_BodyFilter *BodyFilter;
	const JPC_ShapeFilter *ShapeFilter;
} JPC_NarrowPhaseQuery_CollideShapeArgs;
extern void JPC_NarrowPhaseQuery_CollideShape(const JPC_NarrowPhaseQuery* self, JPC_NarrowPhaseQuery_CollideShapeArgs* args);
////////////////////////////////////////////////////////////////////////////////
// PhysicsSystem

typedef struct JPC_PhysicsSystem JPC_PhysicsSystem;
extern JPC_PhysicsSystem* JPC_PhysicsSystem_new();
extern void JPC_PhysicsSystem_delete(JPC_PhysicsSystem* object);
extern void JPC_PhysicsSystem_Init(
	JPC_PhysicsSystem* self,
	uint inMaxBodies,
	uint inNumBodyMutexes,
	uint inMaxBodyPairs,
	uint inMaxContactConstraints,
	JPC_BroadPhaseLayerInterface* inBroadPhaseLayerInterface,
	JPC_ObjectVsBroadPhaseLayerFilter* inObjectVsBroadPhaseLayerFilter,
	JPC_ObjectLayerPairFilter* inObjectLayerPairFilter);
extern void JPC_PhysicsSystem_OptimizeBroadPhase(JPC_PhysicsSystem* self);
extern JPC_PhysicsUpdateError JPC_PhysicsSystem_Update(
	JPC_PhysicsSystem* self,
	float inDeltaTime,
	int inCollisionSteps,
	JPC_TempAllocatorImpl *inTempAllocator, // FIXME: un-specialize
	JPC_JobSystem* inJobSystem);
extern void JPC_PhysicsSystem_AddConstraint(JPC_PhysicsSystem* self, JPC_Constraint* constraint);
extern void JPC_PhysicsSystem_RemoveConstraint(JPC_PhysicsSystem* self, JPC_Constraint* constraint);
extern JPC_BodyInterface* JPC_PhysicsSystem_GetBodyInterface(JPC_PhysicsSystem* self);
extern const JPC_BodyLockInterface* JPC_PhysicsSystem_GetBodyLockInterface(JPC_PhysicsSystem* self);
extern const JPC_NarrowPhaseQuery* JPC_PhysicsSystem_GetNarrowPhaseQuery(const JPC_PhysicsSystem* self);
extern void JPC_PhysicsSystem_DrawBodies(
	JPC_PhysicsSystem* self,
	JPC_BodyManager_DrawSettings* inSettings,
	JPC_DebugRendererSimple* inRenderer, // FIXME: un-specialize
	const void* inBodyFilter); // FIXME: BodyDrawFilter
extern void JPC_PhysicsSystem_DrawConstraints(
	JPC_PhysicsSystem* self,
	JPC_DebugRendererSimple* inRenderer); // FIXME: un-specialize
extern void JPC_PhysicsSystem_SetSimShapeFilter(JPC_PhysicsSystem* self, const JPC_SimShapeFilter* inShapeFilter);
extern void JPC_PhysicsSystem_SetContactListener(JPC_PhysicsSystem* self, JPC_ContactListener* inContactListener);