sandbox/JoltC/fp_jolt.pas


procedure JPC_NarrowPhaseQuery_CastShape(self: PJPC_NarrowPhaseQuery; args: PJPC_NarrowPhaseQuery_CastShapeArgs); cdecl; external joltc;
procedure JPC_CollideShapeSettings_default(obj: PJPC_CollideShapeSettings); cdecl; external joltc;

type
  TJPC_NarrowPhaseQuery_CollideShapeArgs = record
    Shape: PJPC_Shape;
    ShapeScale: TJPC_Vec3;
    CenterOfMassTransform: TJPC_RMat44;
    Settings: TJPC_CollideShapeSettings;
    BaseOffset: TJPC_RVec3;
    Collector: PJPC_CollideShapeCollector;
    BroadPhaseLayerFilter: PJPC_BroadPhaseLayerFilter;
    ObjectLayerFilter: PJPC_ObjectLayerFilter;
    BodyFilter: PJPC_BodyFilter;
    ShapeFilter: PJPC_ShapeFilter;
  end;
  PJPC_NarrowPhaseQuery_CollideShapeArgs = ^TJPC_NarrowPhaseQuery_CollideShapeArgs;

procedure JPC_NarrowPhaseQuery_CollideShape(self: PJPC_NarrowPhaseQuery; args: PJPC_NarrowPhaseQuery_CollideShapeArgs); cdecl; external joltc;

type
  PJPC_PhysicsSystem = type Pointer;

function JPC_PhysicsSystem_new: PJPC_PhysicsSystem; cdecl; external joltc;
procedure JPC_PhysicsSystem_delete(obj: PJPC_PhysicsSystem); cdecl; external joltc;
procedure JPC_PhysicsSystem_Init(self: PJPC_PhysicsSystem; inMaxBodies: Tuint; inNumBodyMutexes: Tuint; inMaxBodyPairs: Tuint; inMaxContactConstraints: Tuint;
  inBroadPhaseLayerInterface: PJPC_BroadPhaseLayerInterface; inObjectVsBroadPhaseLayerFilter: PJPC_ObjectVsBroadPhaseLayerFilter; inObjectLayerPairFilter: PJPC_ObjectLayerPairFilter); cdecl; external joltc;
procedure JPC_PhysicsSystem_OptimizeBroadPhase(self: PJPC_PhysicsSystem); cdecl; external joltc;
function JPC_PhysicsSystem_Update(self: PJPC_PhysicsSystem; inDeltaTime: single; inCollisionSteps: longint; inTempAllocator: PJPC_TempAllocatorImpl; inJobSystem: PJPC_JobSystem): TJPC_PhysicsUpdateError; cdecl; external joltc;
procedure JPC_PhysicsSystem_AddConstraint(self: PJPC_PhysicsSystem; constraint: PJPC_Constraint); cdecl; external joltc;
procedure JPC_PhysicsSystem_RemoveConstraint(self: PJPC_PhysicsSystem; constraint: PJPC_Constraint); cdecl; external joltc;
function JPC_PhysicsSystem_GetBodyInterface(self: PJPC_PhysicsSystem): PJPC_BodyInterface; cdecl; external joltc;
function JPC_PhysicsSystem_GetBodyLockInterface(self: PJPC_PhysicsSystem): PJPC_BodyLockInterface; cdecl; external joltc;
function JPC_PhysicsSystem_GetNarrowPhaseQuery(self: PJPC_PhysicsSystem): PJPC_NarrowPhaseQuery; cdecl; external joltc;
procedure JPC_PhysicsSystem_DrawBodies(self: PJPC_PhysicsSystem; inSettings: PJPC_BodyManager_DrawSettings; inRenderer: PJPC_DebugRendererSimple; inBodyFilter: pointer); cdecl; external joltc;
procedure JPC_PhysicsSystem_DrawConstraints(self: PJPC_PhysicsSystem; inRenderer: PJPC_DebugRendererSimple); cdecl; external joltc;
procedure JPC_PhysicsSystem_SetSimShapeFilter(self: PJPC_PhysicsSystem; inShapeFilter: PJPC_SimShapeFilter); cdecl; external joltc;
procedure JPC_PhysicsSystem_SetContactListener(self: PJPC_PhysicsSystem; inContactListener: PJPC_ContactListener); cdecl; external joltc;

// === Konventiert am: 28-3-26 19:29:22 ===


implementation

// wegen "division_by_zero" in den clibs
{$IF defined(CPUX86) or defined(CPUX64)}
{$asmmode intel}
procedure SetMXCSR;
var
  w2: word = 8064;
begin
  asm
           Ldmxcsr w2
  end;
end;
{$ENDIF}

begin
  {$IF defined(CPUX86) or defined(CPUX64)}
  SetMXCSR;
  {$ENDIF}
end.
end.
